[package]
name = "filecoin-proofs-api"
version = "6.0.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
serde = "1.0.104"
filecoin-proofs-v1 = {git = "https://github.com/liangping/rust-fil-proofs.git", branch="master", package = "filecoin-proofs", version = "~6.0.0", default-features = false, features = ["gpu"] }
filecoin-hashers = {git = "https://github.com/liangping/rust-fil-proofs.git", branch="master", version = "~1.0.1", default-features = false, features = ["poseidon", "sha256"] }
bellperson = { git="https://github.com/liangping/bellperson.git", branch="master", version = "0.12.3", default-features = false, features = ["gpu"] }
fr32 = {git = "https://github.com/liangping/rust-fil-proofs.git", branch="master", version = "~0.1.0", default-features = false, features = ["gpu"] }

[features]
default = ["pairing"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst"]
